--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_click_me">Click Me!</string>
     <string name="label_hello_world">Hello World!</string>
     <string name="label_hello_compose">Hello Compose!</string>
+    <string name="hint_search">Search repository</string>
 </resources>
