--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">👆🏻Swipe Search 🔍</string>
+    <string name="app_name">Swipe Search</string>
     <string name="cd_app_logo">App Logo</string>
     <string name="action_click_me">Click Me!</string>
     <string name="label_hello_world">Hello World!</string>
